Name:		EventAnalysis
Version:	0.0
Synopsis:	
Description: 	
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     


Executable eventanalysis
  Main-is: eventanalysis.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, EventAnalysis

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, 
                   xml-types == 0.3.*,
                   enumerator == 0.4.*, 
                   enumerator-util == 0.1.*,
                   LHEParser == 0.2.*, 
                   HEPUtil == 0.1.*,
                   HROOT == 0.7.*, 
                   ttbar >= 0.1.999 && < 0.3
  Exposed-Modules: 
                   HEP.Automation.EventAnalysis.ProgType
                   HEP.Automation.EventAnalysis.Job
                   HEP.Automation.EventAnalysis.Command
                   HEP.Automation.EventAnalysis.FileDriver
                   HEP.Automation.EventAnalysis.Print
  Other-Modules: 

 
		 