Name:		EventAnalysis
Version:	0.0.999
Synopsis:	LHEvent, LHCOAnalysis event processing using Enumerator
Description: 	LHEvent and LHCOAnalysis common routines for event processing using enumerator so 
                as to reduce some redundant works.
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     


Executable eventanalysis
  Main-is: eventanalysis.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, EventAnalysis

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, 
                   xml-types == 0.3.*,
                   enumerator >= 0.4.18 && < 0.5, 
                   enumerator-util == 0.1.*,
                   LHEParser == 0.2.*, 
                   HEPUtil == 0.1.*,
                   HROOT == 0.7.*, 
                   ttbar >= 0.1.999 && < 0.3, 
                   jobqueue-common >= 0.1.999, 
                   aeson == 0.4.*, 
                   vector == 0.9.*, 
                   unordered-containers == 0.1.*, 
                   madgraph-auto == 0.6.*, 
                   blaze-builder == 0.3.*, 
                   zlib-enum == 0.2.*, 
                   webdav-manager == 0.1.*, 
                   text == 0.11.*, 
                   containers == 0.4.*, 
                   attoparsec == 0.10.*, 
                   bytestring == 0.9.*, 
                   xml-enumerator == 0.4.*
  Exposed-Modules: 
                   HEP.Automation.EventAnalysis.ProgType
                   HEP.Automation.EventAnalysis.Job
                   HEP.Automation.EventAnalysis.Command
                   HEP.Automation.EventAnalysis.FileDriver
                   HEP.Automation.EventAnalysis.Print
  Other-Modules: 

 
		 